Added most jQuery function definitions, not function bodies

--- a/lib/webextension/Makefile
+++ b/lib/webextension/Makefile
@@ -1,5 +1,5 @@
 CXX = clang++
-SRCS = *.cpp
+SRCS = jquery/*.cpp *.cpp
 
 CXXFLAGS = -I../
 LDFLAGS = -lpyjs -L../pyjs -Wl,-rpath='$$ORIGIN/../pyjs'
